--- a/tobaccocessation/templates/activity_prescription_writing/prescription_css.html
+++ b/tobaccocessation/templates/activity_prescription_writing/prescription_css.html
@@ -1,7 +1,7 @@
 {% load static %}
 
-{% ifequal block.medication.0.rx_count 1 %}
+{% if block.medication.0.rx_count == 1 %}
     <link href="{% static url %}prescription/css/single_prescription.css" rel="stylesheet" type="text/css" />
 {% else %}
     <link href="{% static url %}prescription/css/double_prescription.css" rel="stylesheet" type="text/css" />
-{% endifequal %}
+{% endif %}
