Revert "All mention of consent removed from the site"

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -552,6 +552,12 @@ body.fluid #footer
     font-size: 80%;
 }
 
+/* ---- Consent Agreement & Registration ---------- */
+
+#consent-form {
+    margin: 50px 20px 20px 20px;
+}
+
 #reg_form {
     margin: 20px;
 }
