--- a/tobaccocessation/templates/registration/registration_form.html
+++ b/tobaccocessation/templates/registration/registration_form.html
@@ -2,80 +2,160 @@
 {% load i18n static %}
 {% block title %}Sign up for an account{% endblock %}
 
+{% block js %}
+    {{ block.super }}
+    <script type="text/javascript">
+        jQuery(document).ready(function() {
+            jQuery('#id_consent_participant').change(function() {
+                if (jQuery('#id_consent_participant').is(':checked')) {
+                    jQuery("#consent-form").hide();
+                    jQuery("div.consent-checkbox").hide();
+                    jQuery("#consent-given").show();
+                } else {
+                    jQuery("#consent-form").show();
+                    jQuery("div.consent-checkbox").show();
+                    jQuery("#consent-given").hide();
+                }
+            });
+
+            if (jQuery('#id_consent_participant').attr('checked')) {
+                jQuery("#consent-given").show();
+                jQuery("#consent-form").hide();
+                jQuery("div.consent-checkbox").hide();
+            }
+
+            jQuery('#id_consent_not_participant').change(function() {
+                if (jQuery('#id_consent_not_participant').is(':checked')) {
+                    jQuery("#consent-form").hide();
+                    jQuery("div.consent-checkbox").hide();
+                    jQuery("#consent-given").show();
+                } else {
+                    jQuery("#consent-form").show();
+                    jQuery("div.consent-checkbox").show();
+                    jQuery("#consent-given").hide();
+                }
+            });
+            if (jQuery('#id_consent_not_participant').attr('checked')) {
+                jQuery("#consent-given").show();
+                jQuery("#consent-form").hide();
+                jQuery("div.consent-checkbox").hide();
+            }
+
+
+        });
+    </script>
+
+{% endblock %}
+
 {% block registration_content %}
+    <div class="well tc" id="consent-form">
+        <h2>Consent Agreement</h2>
+        <p>Welcome to Columbia University's online tobacco cessation education website. This educational website was produced, through the collaborative efforts of Dr. David Albert from the College of Dental Medicine and the Columbia Center for New Media Teaching and Learning (CCNMTL)</p>
+
+        <p>The purpose of this course is to train dentists to provide evidence-based tobacco cessation education. In addition to completing the course, you are being asked to take part in a research project that will help us to learn more about how to best educate dentists about tobacco cessation.</p>
+
+        <p>As part of the course, we will ask you some questions about yourself and your training as a dentist. You will also complete a pre-test assessment, periodic knowledge questions throughout the modules and a final post-test. If you consent to the research portion of this program, the information you provide will be analyzed to help us determine if the course is effective.</p>
+
+<p>You are not required to participate in the research portion of the project. If you do not wish to participate, the data you provide will not be included in any research analysis. Participation is confidential; if you do not wish to participate in the research you will be able to complete the course.</p>
+
+<p>The data we collect will be stored securely and accessible only to study staff. Data may also be viewed by the Columbia University Medical Center (CUMC) Review Board (IRB), the Office for Human Research Protections. Identifying information will be destroyed and any data included in reports or publications that results from this research will be anonymous.</p>
+
+<p>If you decide later that you no longer wish to participate, you may withdraw your consent. If you have questions or concerns please contact the Principal Investigator, Dr. David Albert at the Columbia University College of Dental Medicine at 212-342-8588 or by email at daa1@columbia.edu.
+You may also contact the CUMC Institutional Review Board (IRB) at 212-305-5883 (reference # IRB- AAAL4455).</p>
+
+    </div>
+
     <form id="reg_form" method="post" action="." class="register form-horizontal">
-        <h2 class="pagetitle signuptitle">Sign up for an account</h2>
-        <div><p>Use the following form to create a new account to access Tobacco Cessation.</p></div>
-
-        <div><p>
-        If you already have a username or password, but have forgotten either,
-            <a href="{% url "password_reset" %}">reset them here</a>.
-        </p></div>
-        <div><p><strong>All fields are required.</strong></p></div>
-
-        <div class="well">
-        <div class="fieldWrapper control-group">
-            {{ form.first_name.errors }}
-            <label class="control-label">First Name: </label>
-            <div class="controls">
-                {{ form.first_name }}
-            </div>
+        <div class="fieldWrapper consent-checkbox">
+            <div>
+                {{ form.consent_participant }}
+                <label> I have read the consent agreement and agree to participate in this study. </label>
+                {{ form.consent_participant.errors }}
+             </div>
+             <br />
+             <div>
+                {{form.consent_not_participant}}
+                <label> I would like to take the course but I do not want to participate in the study. </label>
+                {{ form.consent_not_participant.errors }}
+             </div>
         </div>
 
-        <div class="fieldWrapper control-group">
-            {{ form.last_name.errors }}
-            <label class="control-label">Last Name: </label>
-            <div class="controls">
-                {{ form.last_name }}
-            </div>
-        </div>
-        <div class="fieldWrapper control-group">
-            {{ form.username.errors }}
-            <label class="control-label">Username: </label>
-            <div class="controls">
-                {{ form.username }}
-            </div>
-        </div>
 
-        <div class="fieldWrapper control-group">
-            {{ form.password1.errors }}
-            <label class="control-label">Password: </label>
-            <div class="controls">
-                {{ form.password1 }}
-            </div>
-        </div>
+        <div id="consent-given" style="display: none">
 
-        <div class="fieldWrapper control-group">
-            {{ form.password2.errors }}
-            <label class="control-label">Confirm Password: </label>
-            <div class="controls">
-                {{ form.password2 }}
-            </div>
-        </div>
 
-        <div class="fieldWrapper control-group">
-            {{ form.email.errors }}
-            <label class="control-label">Email: </label>
-            <div class="controls">
-                {{ form.email }}
-            </div>
-        </div>
-        </div>
+            <h2 class="pagetitle signuptitle">Sign up for an account</h2>
+            <div><p>Use the following form to create a new account to access Tobacco Cessation.</p></div>
+
+            <div><p>
+            If you already have a username or password, but have forgotten either,
+                <a href="{% url "password_reset" %}">reset them here</a>.
+            </p></div>
+            <div><p><strong>All fields are required.</strong></p></div>
+
+            <div class="well">
             <div class="fieldWrapper control-group">
-            {{ form.gender.errors }}
-            <label class="control-label">Gender: </label>
-            <div class="controls">
-                {{ form.gender }}
+                {{ form.first_name.errors }}
+                <label class="control-label">First Name: </label>
+                <div class="controls">
+                    {{ form.first_name }}
+                </div>
             </div>
-        </div>
 
-        <div class="fieldWrapper control-group">
-            {{ form.is_faculty.errors }}
-            <label class="control-label">Are you a faculty member or a student?</label>
-            <div class="controls">
-                {{ form.is_faculty }}
+           <div class="fieldWrapper control-group">
+                {{ form.last_name.errors }}
+                <label class="control-label">Last Name: </label>
+                <div class="controls">
+                    {{ form.last_name }}
+                </div>
             </div>
-        </div>
+            <div class="fieldWrapper control-group">
+                {{ form.username.errors }}
+                <label class="control-label">Username: </label>
+                <div class="controls">
+                    {{ form.username }}
+                </div>
+            </div>
+
+            <div class="fieldWrapper control-group">
+                {{ form.password1.errors }}
+                <label class="control-label">Password: </label>
+                <div class="controls">
+                    {{ form.password1 }}
+                </div>
+            </div>
+
+            <div class="fieldWrapper control-group">
+                {{ form.password2.errors }}
+                <label class="control-label">Confirm Password: </label>
+                <div class="controls">
+                    {{ form.password2 }}
+                </div>
+            </div>
+
+            <div class="fieldWrapper control-group">
+                {{ form.email.errors }}
+                <label class="control-label">Email: </label>
+                <div class="controls">
+                    {{ form.email }}
+                </div>
+            </div>
+            </div>
+                <div class="fieldWrapper control-group">
+                {{ form.gender.errors }}
+                <label class="control-label">Gender: </label>
+                <div class="controls">
+                    {{ form.gender }}
+                </div>
+            </div>
+
+            <div class="fieldWrapper control-group">
+                {{ form.is_faculty.errors }}
+                <label class="control-label">Are you a faculty member or a student?</label>
+                <div class="controls">
+                    {{ form.is_faculty }}
+                </div>
+            </div>
 
         <div class="fieldWrapper control-group">
             {{ form.specialty.errors }}
